Comm Disc add bee items

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -354,6 +354,8 @@ Selected Reddit posts:
 - A [post](https://www.reddit.com/r/decred/comments/fhrsqn/austerity_mindset/fkd6nrn/) from u/Corp-Por asking whether Decred should adopt an austerity mindset with Treasury funds had 22 comments and a score of 7. Most of the commenters were not as keen as the OP to make drastic changes, citing the Treasury's ample reserves and capacity to maintain funding at current rates for 5 years.
 - A [post](https://www.reddit.com/r/decred/comments/frb863/next_privacy_iteration_how_private_and_fungible/) asking about Decred's next privacy iteration had @jy-p respond to say that the approach is to pick the low-hanging fruit (Decrediton support, post-quantum security), continue to increase mixing uptake, then revisit questions about how to enhance privacy further.
 - @davecgh [responded](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) to the unfortunate story of a Decred stakeholder who has lost access to their staked DCR because the VSP they were using went offline, their Decrediton machine was destroyed, and they had not saved the redeem script (see details [here](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script)). @davecgh explained that the redeem script is shared with the VSP as a multi-sig where either the user or VSP can redeem locked DCR and revoke tickets. As redeem scripts are reused and revealed when the first ticket is redeemed, this stuck DCR scenario can only occur when the wallet of the user or VSP has never been online to redeem any of the tickets that used it. Once a single ticket has been redeemed by that wallet/VSP combination, the script is effectively stored in the blockchain.
+- @bee [thinks](https://www.reddit.com/r/decred/comments/frqvmc/checkmate_on_twitter_ftx_has_finally_listed_dcr/flxb7s0/) that derivatives are evil and is hoping to get enlightened about their benefit for the public.
+- @bee made a [point](https://www.reddit.com/r/decred/comments/frqkt0/your_favorite_misconceptions_about_decred_in_one/fm1jrmc/?context=3) that not all consensus changes are as undesirable as frequent PoW algorithm changes necessary to maintain ASIC resistance.
 
 Selected Twitter discussions:
 
