--- a/journal/202003.md
+++ b/journal/202003.md
@@ -392,24 +392,24 @@ President of one of the 12 Federal Reserve Banks openly admitted in an [intervie
 
 ECB [announced](https://www.ecb.europa.eu/press/pr/date/2020/html/ecb.pr200318_1~3949d6f266.en.html) a EUR 750 billion "Pandemic Emergency Purchase Programme" and [noted](https://twitter.com/Lagarde/status/1240414918966480896) "There are no limits to our commitment to the euro. We are determined to use the full potential of our tools, within our mandate". The bank is ready to further increase the size of asset purchase programmes and revise any self-imposed limits.
 
-## Happy Birthday DJ
+## Happy Birthday DJ!
 
 24th issue marks the second anniversary of Decred Journal.
 
 Retrospective and a bit of trivia from @bee:
 
-- The DJ team has grown from 2 to ~5 stable contributors, a half dozen translators, and 1-2 dozens people reviewing and sharing feedback.
-- The byte size of an issue has grown from 20 KB to ~50 KB. The biggest issue was [64.5 K](https://xaur.github.io/decred-news/journal/201908.html).
+- The DJ team has grown from 2 to ~5 stable contributors, ~3-8 translators, and ~7-11 people reviewing and sharing feedback.
+- The byte size of an issue has grown from 20 KB to ~50 KB. The biggest issue was [64.5 K](https://xaur.github.io/decred-news/journal/201908.html) (7.5K words).
 - Our production process has evolved significantly and is now extensively [documented](https://github.com/xaur/decred-news/blob/docs/guidelines.md).
-- You may have noticed that [Decred](https://xaur.github.io/decred-news/journal/201805.html) [Cake](https://xaur.github.io/decred-news/journal/202002.html) has a special meaning for me.
-- Among dozens of titles considered were "Monthly Stakeholder Entertainment Session" and "Deep in Decred". The latter was rejected as having too strong connotations with adult content.
-- { maybe post that Mar 2018 draft for fun }
+- You may have noticed that [Decred](https://xaur.github.io/decred-news/journal/201805.html) [Cakes](https://xaur.github.io/decred-news/journal/202002.html) have a special meaning for me.
+- To publish the very [first](https://xaur.github.io/decred-news/journal/201804.html) issue we needed a title. Among the candidates considered were "Monthly Stakeholder Entertainment Session" and "Deep in Decred". The latter was rejected as having too strong connotations with adult content.
 - In March 2019 I got somewhat exhausted and [announced](https://xaur.github.io/decred-news/journal/201903.html#psa-decred-journal-takes-a-break) that the production of future issues is uncertain. Luckily, a few more people have [stepped in](https://github.com/xaur/decred-news/issues/65) and we continued.
-- Problem of the first year: at the start of every issue I worried that it wouldn't get enough content. I was wrong every single time. Problem of the second year: at the end of every issue I worried that we wouldn't cover everything we'd like to or grow it too big. And it was often the case! There's too much going on in Decred and in the crypto space.
+- Problem of the first year: when starting every issue I worried that I wouldn't collect enough content and that it would look poor compared to previous months that had so much. I was wrong every single time. Problem of the second year: when finishing every issue I worried that it is too big and it got hard to track everything that is happening.
 - I couldn't imagine what the [index](https://xaur.github.io/decred-news/) of all issues and translations would look like in 2 years!
 - After pioneering the use of Git and GitHub for DJ I began to annoy pretty much everyone in the community to do the same for other documents. I believe that knowledge preservation is [important](https://github.com/xaur/decred-news/blob/docs/guidelines.md#why-git) and will keep annoying you guys. Thank you for your patience.
-- About 6 months after starting DJ I began to worry about decreasing Reddit upvotes. I talked to people and learned two things. First is that people who've been here for years told me it is common: humans get less sensitive to any stimulus over time, even high quality one. Second is that I don't know these people who leave likes. But people I do know, talk to every day, people with most intelligence and wisdom, people I care about most and who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing their job for years. So I asked myself, why do I care about these unknown people more than I care what the best people around me think? It doesn't make sense! So I stopped worrying about that. (No offense to any DJ readers!)
-- We received a lot of positive [feedback](https://xaur.github.io/decred-news/testimonials.html) over these two years. We don't write DJ for praise, but kind words let us know that we're still on the right track. Thank you all!
+- About 6 months after starting DJ I got upset about declining Reddit upvotes. Then I talked to people and learned two things. First is that people who've been here for years say it is common: humans get less sensitive to any stimulus over time, even a good one. Second is that I took upvotes seriously without even knowing who is behind those numbers. But people I do know, talk to every day, people of highest intelligence and wisdom who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing an amazing job for years without chasing the likes. So I asked myself, why do I care about these numbers more than I care what the best people around me think? It makes no sense! So I stopped worrying about that. (No offense to our dear readers, I'm sharing this for anyone who gets overfocused on stats).
+- Thanks to Decred stakeholders for funding this work and helping us deliver the scale and quality of this production.
+- We received a lot of positive [feedback](https://xaur.github.io/decred-news/testimonials.html) over these two years. Praise is not the goal, but kind words let us know that we're still on the right track. Thank you for all the support!
 
 ## About This Issue
 
