--- a/journal/202003.md
+++ b/journal/202003.md
@@ -276,6 +276,10 @@ Attended:
 - Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
 - Mar 30 - [Decred and Sound Money Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. The event was hosted by @eSizeDave and @zohand and joined by @Checkmate to discuss key topics such as sound money, the macroeconomic environment, gold, and Decred. Participants were quite impressed by the quality and left good fedback, one of them enjoying that it was "mentally stimulating". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200330-decred-and-sound-money-internet.md))
 
+Canceled:
+
+- Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada.
+
 Upcoming:
 
 - Apr 9 - Bitcoin Road Trip - Buenos Aires, Argentina.
@@ -283,8 +287,8 @@ Upcoming:
 - Apr 16 - [Decred Webinar](https://twitter.com/Decred_ES/status/1245452957417684992) - Internet. The topic will be "Let's talk about cryptocurrencies and the future of money" - a webinar hosted by Ibero (university) to discuss crypto and give an overview of Decred.
 - May 14 - [BlockConf](https://blockconf.digital/) - Internet. @elian will talk about Decred in LATAM.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
-- June - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
-- June - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
+- June or later - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
+- June or later - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
 - End of 2020 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. Moved from March.
 
 Postponed until further notice:
@@ -292,12 +296,6 @@ Postponed until further notice:
 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain.
 - Decred Meetup - La Paz, Bolivia.
 - [Bitcoinference](https://www.eventbrite.com/e/bitcoinference-where-the-blockchain-meets-you-tickets-94598812595) - Cancún, Mexico.
-
-Canceled:
-
-- Apr 5 - [Toronto Blockchain Week](https://www.eventbrite.ca/e/discover-decred-an-autonomous-digital-currency-toronto-blockchain-week-tickets-91562362491) - Toronto, Canada.
-
-A lot of events were canceled or [rescheduled](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158394973936195eJdnt:decred.org) due to COVID-19 fears.
 
 ## Media
 
